# LumenDSP

./: .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  RELEASING.md  build-and-start.sh
.github/workflows/: ci.yml  release.yml
Resources/FactoryContent/: ATTRIBUTION.md
Resources/FactoryContent/docs/: GETTING_STARTED.txt
Resources/web/: app.js  index.html  styles.css
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/audio/: AudioPipeline.cpp  AudioPipeline.h  Compressor.cpp  Compressor.h  Delay.cpp  Delay.h  Drive.cpp  Drive.h  IrConvolver.cpp  IrConvolver.h  LevelMeter.cpp  LevelMeter.h  Metronome.cpp  Metronome.h  NamEngine.cpp  NamEngine.h  NoiseGate.cpp  NoiseGate.h  ReverbFx.cpp  ReverbFx.h  ThreeBandEq.cpp  ThreeBandEq.h  Tuner.cpp  Tuner.h
Source/parameters/: ParameterIds.h
Source/presets/: FactoryContentInstaller.cpp  FactoryContentInstaller.h  PresetManager.cpp  PresetManager.h  ResourceLibrary.cpp  ResourceLibrary.h
Source/ui/: AmpFaceplateComponent.cpp  AmpFaceplateComponent.h  CabStageComponent.cpp  CabStageComponent.h  DesignTokens.h  EqRackComponent.cpp  EqRackComponent.h  FileSlotComponent.cpp  FileSlotComponent.h  InputStageComponent.cpp  InputStageComponent.h  KnobComponent.cpp  KnobComponent.h  LedMeterComponent.cpp  LedMeterComponent.h  LumenLookAndFeel.cpp  LumenLookAndFeel.h  PedalModuleComponent.cpp  PedalModuleComponent.h  PresetBarComponent.cpp  PresetBarComponent.h  SectionNavComponent.cpp  SectionNavComponent.h  SignalFlowStrip.cpp  SignalFlowStrip.h  TopChromeComponent.cpp  TopChromeComponent.h
scripts/: bump-version.sh  update-readme-release.sh
